[gd_scene load_steps=11 format=3 uid="uid://31fxnjuu1v6o"]

[ext_resource type="PackedScene" uid="uid://cyrjqlsuuv5" path="res://scenes/map_editor/story/stories/types/base_edit_action.tscn" id="1_adm6f"]
[ext_resource type="Script" path="res://scenes/map_editor/story/stories/types/use_ability.gd" id="2_leewo"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="3_yiogh"]
[ext_resource type="Texture2D" uid="uid://bkp8gbivdpjm" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown.png" id="4_kd673"]
[ext_resource type="Texture2D" uid="uid://ceku0o1lajwmu" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_pressed.png" id="5_dnna3"]
[ext_resource type="Texture2D" uid="uid://bewr0f1ty1b3v" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_hover.png" id="6_plxpn"]
[ext_resource type="PackedScene" uid="uid://gxr1dxy4v75y" path="res://scenes/ui/icons/pen.tscn" id="7_o76hm"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="8_8agxf"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="9_fc5bi"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="10_1sk18"]

[node name="UseAbility" instance=ExtResource("1_adm6f")]
script = ExtResource("2_leewo")

[node name="who" type="Label" parent="." index="4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
offset_right = -250.0
offset_bottom = -310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_yiogh")
text = "TR_WHO"
vertical_alignment = 1

[node name="x" type="LineEdit" parent="who" index="0"]
layout_mode = 0
offset_left = 395.0
offset_right = 465.0
offset_bottom = 40.0
placeholder_text = "X"
alignment = 1
max_length = 2

[node name="y" type="LineEdit" parent="who" index="1"]
layout_mode = 0
offset_left = 470.0
offset_right = 540.0
offset_bottom = 40.0
placeholder_text = "Y"
alignment = 1
max_length = 2

[node name="who_picker_button" type="TextureButton" parent="who" index="2"]
layout_mode = 0
offset_left = 350.0
offset_right = 386.0
offset_bottom = 40.0
texture_normal = ExtResource("4_kd673")
texture_pressed = ExtResource("5_dnna3")
texture_hover = ExtResource("6_plxpn")
texture_focused = ExtResource("6_plxpn")

[node name="anchor" type="Control" parent="who/who_picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="who/who_picker_button/anchor" index="0" instance=ExtResource("7_o76hm")]

[node name="which" type="Label" parent="." index="5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 200.0
offset_right = -250.0
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_yiogh")
text = "TR_ABILITY"
vertical_alignment = 1

[node name="which" type="LineEdit" parent="which" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
alignment = 1

[node name="where" type="Label" parent="." index="6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 250.0
offset_right = -250.0
offset_bottom = -210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_yiogh")
text = "TR_WHERE"
vertical_alignment = 1

[node name="x" type="LineEdit" parent="where" index="0"]
layout_mode = 0
offset_left = 395.0
offset_right = 465.0
offset_bottom = 40.0
placeholder_text = "X"
alignment = 1
max_length = 2

[node name="y" type="LineEdit" parent="where" index="1"]
layout_mode = 0
offset_left = 470.0
offset_right = 540.0
offset_bottom = 40.0
placeholder_text = "Y"
alignment = 1
max_length = 2

[node name="where_picker_button" type="TextureButton" parent="where" index="2"]
layout_mode = 0
offset_left = 350.0
offset_right = 386.0
offset_bottom = 40.0
texture_normal = ExtResource("4_kd673")
texture_pressed = ExtResource("5_dnna3")
texture_hover = ExtResource("6_plxpn")
texture_focused = ExtResource("6_plxpn")

[node name="anchor" type="Control" parent="where/where_picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="where/where_picker_button/anchor" index="0" instance=ExtResource("7_o76hm")]

[node name="cooldown" type="Label" parent="." index="7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 300.0
offset_right = -250.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_yiogh")
text = "TR_COOLDOWN"
vertical_alignment = 1

[node name="cooldown_button" type="TextureButton" parent="cooldown" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
texture_normal = ExtResource("8_8agxf")
texture_pressed = ExtResource("9_fc5bi")
texture_hover = ExtResource("10_1sk18")
texture_focused = ExtResource("10_1sk18")

[node name="label" type="Label" parent="cooldown/cooldown_button" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_yiogh")
text = "TR_ON"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_changed" from="who/x" to="." method="_on_text_changed"]
[connection signal="text_changed" from="who/y" to="." method="_on_text_changed"]
[connection signal="pressed" from="who/who_picker_button" to="." method="_on_who_picker_button_pressed"]
[connection signal="text_changed" from="which/which" to="." method="_on_text_changed"]
[connection signal="text_changed" from="where/x" to="." method="_on_text_changed"]
[connection signal="text_changed" from="where/y" to="." method="_on_text_changed"]
[connection signal="pressed" from="where/where_picker_button" to="." method="_on_where_picker_button_pressed"]
[connection signal="pressed" from="cooldown/cooldown_button" to="." method="_on_cooldown_button_pressed"]
